Go-Live changes

--- a/themes/hello-friend-ng/layouts/index.html
+++ b/themes/hello-friend-ng/layouts/index.html
@@ -17,6 +17,9 @@
                 <div>
                     {{ partial "social-icons.html" . }}
                 </div>
+                <div>
+                    <a href="https://blog.bananacastle.co.uk" class="blog-link">View The Blog</a>
+                </div>
             {{- end }}
         </div>
     </main>
